Build Tests for all Tasks